# atlas-project

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_MANIFEST.md  README.md  VERSION.md
.claude/: settings.local.json
00_Master_Context/: MC-000_Repository_Index.md  MC-001_Project_Vision_and_Product_Charter.md  MC-002_Product_Foundation.md  MC-003_Product_Scope_and_Roadmap.md  MC-004_Core_Principles_and_Governance.md  MC-005_Terminology_and_Glossary.md
01_Architecture/: AI_Architecture.md  Data_Architecture.md  Deployment_Architecture.md  Integration_Architecture.md  Multi_Tenant_Architecture.md  Non_Functional_Architecture.md  Security_Architecture.md  System_Architecture.md
02_Domains/: DOMAIN-001_Organization_Domain.md  DOMAIN-002_Identity_User_Domain.md  DOMAIN-003_Project_Domain.md  DOMAIN-004_Meeting_Domain.md  (+6 more)
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/api/: __init__.py  health.py
backend/api/v1/: __init__.py  router.py  security.py
backend/apps/: __init__.py
backend/apps/identity/: __init__.py  api.py  domain.py  models.py  repositories.py  schemas.py  security.py  services.py
backend/core/: __init__.py  application.py  container.py  errors.py  health.py  middleware.py
backend/infrastructure/: __init__.py
backend/infrastructure/cache/: __init__.py  redis.py
backend/infrastructure/database/: __init__.py  base.py  engine.py  session.py  unit_of_work.py
backend/infrastructure/messaging/: __init__.py  kafka.py  outbox_model.py
backend/infrastructure/repositories/: __init__.py  base.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_platform_event_outbox.py  0002_identity_tables.py
backend/shared/: __init__.py
backend/shared/auth/: __init__.py  contracts.py
backend/shared/config/: __init__.py  features.py  secrets.py  settings.py
backend/shared/constants/: __init__.py  platform.py
backend/shared/contracts/: __init__.py  api.py
backend/shared/events/: __init__.py  envelope.py  naming.py  outbox.py  publisher.py
backend/shared/exceptions/: __init__.py  errors.py
backend/shared/logging/: __init__.py  context.py  logger.py
backend/shared/monitoring/: __init__.py  health.py
backend/shared/security/: __init__.py  primitives.py
backend/shared/telemetry/: __init__.py  metrics.py
backend/shared/utils/: __init__.py  identifiers.py
backend/shared/validation/: __init__.py  validators.py
backend/tests/unit/identity/: test_authorization.py  test_enforcement.py  test_fail_secure.py  test_security.py
backend/tests/unit/infrastructure/: test_outbox_gate.py
backend/tests/unit/shared/: test_config_framework.py  test_constants_exceptions.py  test_events.py  test_monitoring_auth_contracts.py  test_telemetry_config_files.py  test_validation_security.py
backend/workers/: __init__.py  app.py  outbox.py  tasks.py
(+121 files in other folders)
