# Project ATLAS — Backend
# Governing documents: IP-001 §7 (backend stack), §15 (runtime standards),
# ES-006 §6 (version-pinned, reproducible builds)

[project]
name = "atlas-backend"
version = "0.1.0"
description = "Project ATLAS backend platform (IP-001 Platform Foundation)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    # Infrastructure foundation (IP-001 §7; Stage S1.2B)
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30",
    "redis>=5.2,<7.0",
    "aiokafka>=0.12,<1.0",
    "celery>=5.4,<6.0",
]

[tool.uv]
# Lockfile (uv.lock) is generated on first `uv sync` and provides the
# exact version pinning mandated by ES-006 §6.
