# Project ATLAS — Backend
# Governing documents: IP-001 §7 (backend stack), §15 (runtime standards),
# ES-006 §6 (version-pinned, reproducible builds)

[project]
name = "atlas-backend"
version = "0.1.0"
description = "Project ATLAS backend platform (IP-001 Platform Foundation)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    # Infrastructure foundation (IP-001 §7; Stage S1.2B)
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30",
    "redis>=5.2,<7.0",
    "aiokafka>=0.12,<1.0",
    "celery>=5.4,<6.0",
    "argon2-cffi>=23.1,<26.0",
    "pyjwt>=2.10,<3.0",
    "email-validator>=2.2,<3.0",
]

[dependency-groups]
# Testing dependencies (approved S1.4 decision; full harness lands in S1.9)
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<2.0",
    "pytest-cov>=6.0,<8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# Unit tests are deterministic and network-free (ES-007 §5).
addopts = "-q"

[tool.coverage.run]
source = ["shared"]

[tool.coverage.report]
# Shared libraries coverage floor (ES-001 §14 / IP-001 §19: >= 95%)
fail_under = 95
show_missing = true
exclude_also = ["\\.\\.\\.", "pragma: no cover", "if TYPE_CHECKING:"]

[tool.uv]
# Lockfile (uv.lock) is generated on first `uv sync` and provides the
# exact version pinning mandated by ES-006 §6.
